# VoynichLab

./: .gitignore  README.md  REPOSITORY-GOVERNANCE.md  evidence-cases.json  package.json
DataSetCreator/: .gitignore  README.md  package-lock.json
EVAComparisonLab/: README.md  RESEARCH-ROADMAP.md  package.json
GrammarDiscoveryLab/: README.md  RESEARCH-TIMELINE.md  package.json
TranslationLab/: README.md  package.json
TranslationLab/app/: main.js
apps/: README.md
apps/dataset-creator/src-tauri/: Cargo.toml  tauri.conf.json
apps/dataset-creator/src-tauri/src/: database.rs  models.rs
atom-atlas/: atoms.json
cases/: known-labeling-anomalies.tsv  known-particle-geometry-anomalies.tsv
docs/: ACTIVE-RESEARCH-FOUNDATION.md  CLEANUP-BACKLOG.md  CORPUS-V3-CONSOLIDATION-REPORT.md  CORPUS-V3-DATA-CONTRACT.md  CORPUS-V3-MIGRATION-READINESS.md  DATASETCREATOR-ARCHITECTURE.md  DATASETCREATOR-SAFETY.md  DEEP-REPO-AUDIT-2026-07-14.md  DEPLOYMENT.md  LOCAL-STATE-INVENTORY.md  MONOREPO-ARCHITECTURE.md  NOMENCLATURE-TRANSITION.md  PARTICLES-V1-SPECIFICATION.md  PUBLIC-VERIFIABILITY.md  README.md  REPO-AUDIT-PLAN.md  REPO-INVENTORY.md  REPOSITORY-MOVE-SAFETY-MANIFEST-2026-07-19.md  REPOSITORY-STRUCTURE-MIGRATION-2026-07-19.md  RETIRED-TOOLS.md  STABILIZATION-REPORT-2026-07-17.md  WORKTREE-TRIAGE-2026-07-14.md
labs/: README.md
paper/: CLAIMS.md  FIGURES.md  NOVELTY-MATRIX.md  OUTLINE.md  README.md
research/: FROZEN-EVIDENCE.md  README.md  frozen-evidence.json
research-feed/: README.md  evidence-cases.json  experiments.json  milestones.json  releases.json  site.json
(+601 files in other folders)
