[package]
name = "dataset-creator"
version = "0.1.0"
description = "DataSetCreator - Opinion-free corpus builder for manuscript annotation"
authors = ["DataSetCreator"]
edition = "2021"
default-run = "dataset-creator"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
image = "0.25"
base64 = "0.22"
